# sinan

./: Cargo.toml  HANDOFF.md
crates/core/: Cargo.toml
crates/core/src/: circuit_breaker_durable.rs  control_plane.rs  gateway_composition.rs  inbound_processor.rs  lib.rs  main.rs  outbound_processor.rs  risk_workflow.rs
crates/core/tests/: circuit_breaker_durable.rs  control_plane.rs  inbound_processor.rs  native_tcp_execution_e2e.rs  outbound_processor.rs  risk_workflow.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/events/tests/: manager.rs
crates/execution/: Cargo.toml
crates/execution/src/: builder.rs  delivery.rs  lib.rs  projector.rs  state.rs
crates/execution/tests/: execution.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: auth.rs  config.rs  connection.rs  durable_inbound.rs  execution_ws.rs  inbound.rs  lib.rs  native_tcp.rs  outbound.rs  registry.rs  session.rs  sink.rs  transport_persistence.rs  validation.rs  writer.rs
crates/gateway/tests/: durable_inbound.rs  execution_ws_binding.rs  native_tcp_binding.rs
crates/http/: Cargo.toml
crates/http/src/: auth.rs  dto.rs  error.rs  events_ws.rs  lib.rs  port.rs  router.rs
crates/http/tests/: events_ws.rs  router.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: framing.rs  lib.rs  message.rs  payload.rs  signing.rs  version.rs
crates/protocol/tests/: golden_protocol.rs
crates/reconciliation/: Cargo.toml
crates/reconciliation/src/: error.rs  evaluation.rs  lib.rs  model.rs  request.rs  validation.rs
crates/reconciliation/tests/: reconciliation.rs
crates/risk/: Cargo.toml
crates/risk/src/: circuit_breaker.rs  evaluator.rs  lib.rs  model.rs
crates/risk/tests/: evaluator.rs
crates/store/: Cargo.toml
crates/store/migrations/: V0001__init.sql  V0002__state_store_schema.sql  V0003__execution_durability.sql  V0004__reconciliation_durability.sql  V0005__gateway_delivery_durability.sql  V0006__event_stream_sequence.sql  V0007__inbound_durability.sql  V0008__risk_workflow_inputs.sql  V0009__outbound_delivery_work.sql  V0010__inbound_raw_payload_length.sql
crates/store/src/: connection.rs  control_plane.rs  error.rs  event_stream.rs  gateway_delivery.rs  inbound_durability.rs  json.rs  lib.rs  model.rs  outbound_work.rs  projection.rs  reconciliation.rs  repository.rs  risk_capacity.rs  risk_snapshot.rs  transaction_snapshot.rs  transport_events.rs
crates/store/tests/: circuit_breaker_snapshots.rs  control_plane.rs  event_stream.rs  execution_workflows.rs  gateway_delivery.rs  inbound_durability.rs  migrations.rs  projections.rs  reconciliation_persistence.rs  repositories.rs  risk_capacity.rs  risk_results.rs  schema.rs
crates/store/tests/common/: mod.rs
crates/types/: Cargo.toml
crates/types/src/: dto.rs  enums.rs  ids.rs  lib.rs
crates/types/tests/: serde_roundtrip.rs
docs/: quant_trading_7_layer_target_architecture.md
tests/golden/execution_client_protocol/: command_received.json  execution_command_buy_market.json  session_hello.json
