[workspace]
resolver = "2"
members = [
  "crates/types",
  "crates/protocol",
  "crates/domain",
  "crates/store",
  "crates/gateway",
  "crates/risk",
  "crates/execution",
  "crates/reconciliation",
  "crates/events",
  "crates/http",
  "crates/core",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
rust_decimal = { version = "1", default-features = false, features = ["std"] }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.29"
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"
