[package]
name = "sinan-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sinan-risk = { path = "../risk" }
sinan-store = { path = "../store" }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true

[lints]
workspace = true
