[package]
name = "sinan-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sinan-events = { path = "../events" }
sinan-execution = { path = "../execution" }
sinan-gateway = { path = "../gateway" }
sinan-http = { path = "../http" }
sinan-protocol = { path = "../protocol" }
sinan-reconciliation = { path = "../reconciliation" }
sinan-risk = { path = "../risk" }
sinan-store = { path = "../store" }
sinan-types = { path = "../types" }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
sqlx.workspace = true
tokio.workspace = true

[lints]
workspace = true
