[package]
name = "sinan-events"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sinan-store = { path = "../store" }
sinan-types = { path = "../types" }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
