[package]
name = "sinan-execution"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sinan-protocol = { path = "../protocol" }
sinan-risk = { path = "../risk" }
sinan-types = { path = "../types" }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
