[package]
name = "sinan-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sinan-execution = { path = "../execution" }
sinan-protocol = { path = "../protocol" }
sinan-store = { path = "../store" }
sinan-types = { path = "../types" }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
sqlx.workspace = true

[lints]
workspace = true
