[package]
name = "sinan-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sinan-events = { path = "../events" }
sinan-store = { path = "../store" }
sinan-types = { path = "../types" }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
futures-util.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tower.workspace = true

[lints]
workspace = true
