[package]
name = "sinan-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hex.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sinan-types = { path = "../types" }
thiserror.workspace = true

[lints]
workspace = true
