[package]
name = "sinan-reconciliation"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
sinan-execution = { path = "../execution" }
sinan-protocol = { path = "../protocol" }
sinan-types = { path = "../types" }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
