[package]
name = "sinan-risk"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hex.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sinan-types = { path = "../types" }

[lints]
workspace = true
