[package]
name = "sinan-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sinan-protocol = { path = "../protocol" }
sinan-types = { path = "../types" }
sqlx.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
